--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,17 +4,11 @@ android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.ub700.securedocs"
-        minSdkVersion 24
+        minSdkVersion 26
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-    }
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-        }
+//        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
@@ -24,18 +18,18 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation 'androidx.appcompat:appcompat:1.0.0-beta01'
-    implementation 'com.google.android.material:material:1.0.0-beta01'
+    implementation 'androidx.appcompat:appcompat:1.1.0-alpha05'
+    implementation 'com.google.android.material:material:1.1.0-alpha06'
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test:runner:1.1.0-alpha4'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha4'
+    androidTestImplementation 'androidx.test:runner:1.2.0-beta01'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0-beta01'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support:design:28.0.0'
     // Provides ARCore Session and related resources.
-    implementation 'com.google.ar:core:1.7.0'
+    implementation 'com.google.ar:core:1.9.0'
     // Use the Sceneform UX Package pre-built from Maven.
-    implementation 'com.google.ar.sceneform.ux:sceneform-ux:1.7.0'
-    implementation 'com.google.zxing:core:3.3.0'
+    implementation 'com.google.ar.sceneform.ux:sceneform-ux:1.9.0'
+    implementation 'com.google.zxing:core:3.4.0'
 }
 apply plugin: 'com.google.ar.sceneform.plugin'
