--- a/build.gradle
+++ b/build.gradle
@@ -4,12 +4,12 @@ buildscript {
     repositories {
         google()
         jcenter()
-        mavenLocal()
+//        mavenLocal()
         
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.3.0'
-        classpath 'com.google.ar.sceneform:plugin:1.7.0'
+        classpath 'com.android.tools.build:gradle:3.4.1'
+        classpath 'com.google.ar.sceneform:plugin:1.9.0'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -19,7 +19,7 @@ allprojects {
     repositories {
         google()
         jcenter()
-        mavenLocal()
+//        mavenLocal()
         
     }
 }
