--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,14 @@
                 android:value="com.ub700.securedocs.LoginActivity" />
         </activity>
         <activity
+            android:name=".AuthActivity"
+            android:configChanges="orientation|screenSize"
+            android:exported="true"
+            android:label="@string/app_name"
+            android:screenOrientation="locked"
+            android:theme="@style/Theme.AppCompat.NoActionBar">
+        </activity>
+        <activity
             android:name=".SignUpActivity"
             android:label="@string/sign_up" />
         <activity
